--- a/app/assets/stylesheets/components/session/splash_header.scss
+++ b/app/assets/stylesheets/components/session/splash_header.scss
@@ -8,27 +8,41 @@
 .splash-header {
   display: flex;
   justify-content: space-between;
-  .splash-img {
-    display: flex;
-    width: 150px;
-    margin-top: 5px;
-    margin-left: 20px;
-    // height: 100px;
-  }
-  .splash-header-buttons {
-    // margin-left: 35%;
-    text-decoration: none;
+  // background-color: rgb(195, 94, 71);
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+  position: fixed;
+  width: 100%;
+  z-index: 10;
+}
+.splash-img {
+  display: flex;
+  margin-top: 5px;
+  margin-left: 20px;
+  height: 50px;
+  width: auto;
+  // height: 100px;
+}
+// .splash-header {
+//   display: flex;
+//   justify-content: space-between;
+.splash-header-buttons {
+  // margin-left: 35%;
+  text-decoration: none;
+  color: black;
+  display: flex;
+  // flex-direction: row;
+  // justify-content: space-evenly;
+  align-items: flex-end;
+  padding-top: 5px;
+  padding-right: 20px;
+  font-size: 20px;
+  a {
     color: black;
-    display: flex;
-    flex-direction: row;
-    // justify-content: space-evenly;
-    align-items: flex-end;
-    padding-top: 5px;
-    padding-right: 20px;
-    font-size: 30px;
-    a {
-        color: black;
-        text-decoration: none;
+    text-decoration: none;
+    &:hover {
+      color: rgb(195, 93, 71);
     }
   }
 }
+// }
