--- a/app/assets/stylesheets/components/sidebar/reduced_sidebar.scss
+++ b/app/assets/stylesheets/components/sidebar/reduced_sidebar.scss
@@ -33,7 +33,7 @@
     margin-right: 10px;
     margin-left: 10px;
     margin-bottom: 10px;
-    padding-top: 10px;
+    // padding-top: 10px;
     .sidebar-search {
       cursor: pointer;
       width: 38px;
