--- a/app/assets/stylesheets/components/tags/tags.scss
+++ b/app/assets/stylesheets/components/tags/tags.scss
@@ -103,74 +103,81 @@ $oxygen: "Oxygen";
           }
         }
       }
-      .dropdown-li {
-        display: flex;
-        align-items: center;
-        padding-bottom: 6px;
-        // position: relative;
-        .dropdown {
-          position: absolute;
-          right: 0px;
-          margin-right: 20px;
-          cursor: pointer;
-        }
-        .dropdown-item-div {
-          border-radius: 1px;
-          box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
-          background-color: pink;
-          p {
-            background-color: #fff;
-          }
-          .dropdown-item-delete {
-            border: 1px solid #ccc;
-            position: absolute;
-            right: 0px;
-            top: 20px;
-            font-weight: bold;
-            // box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
-            padding: auto;
-            z-index: 1;
-            width: 200px;
-            text-align: center;
-            padding: 5px;
-            border-top-right-radius: 2px;
-            border-top-left-radius: 2px;
-            &:hover {
-              background-color: rgb(195, 93, 71);
-              color: #fff;
-            }
-          }
-          .dropdown-item-update {
-            border: 1px solid #ccc;
-            border-top: 1px solid #fff;
-            // border-right: 1px solid #ccc;
-            // border-left: 1px solid #ccc;
-            position: absolute;
-            right: 0px;
-            top: 45px;
-            font-weight: bold;
-            padding: auto;
-            z-index: 1;
-            width: 200px;
-            text-align: center;
-            padding: 5px;
-            border-bottom-left-radius: 2px;
-            border-bottom-right-radius: 2px;
-            &:hover {
-              background-color: rgb(195, 93, 71);
-              color: #fff;
-            }
-          }
-        }
-        .test-dropdown {
-          position: absolute;
-          margin-left: 5px;
-          text-decoration: none;
-          &:hover {
-            text-decoration: none;
-          }
-        }
-      }
+      //tag-dropdown
+      // .dropdown-li {
+      //   height: 0px;
+      //   display: flex;
+      //   align-items: center;
+      //   padding-bottom: 6px;
+      // position: relative;
+      // .dropdown {
+      //   position: absolute;
+      //   right: 0px;
+      //   margin-right: 20px;
+      //   cursor: pointer;
+      // }
+      // .dropdown-item-div {
+      //   border-radius: 1px;
+      //   box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
+      //   background-color: pink;
+      //   p {
+      //     background-color: #fff;
+      //   }
+      //   .dropdown-item-delete {
+      //     border: 1px solid #ccc;
+      //     position: absolute;
+      //     right: 0px;
+      //     top: 20px;
+      //     font-weight: bold;
+      //     // box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
+      //     padding: auto;
+      //     z-index: 1;
+      //     width: 200px;
+      //     text-align: center;
+      //     padding: 5px;
+      //     border-top-right-radius: 2px;
+      //     border-top-left-radius: 2px;
+      //     &:hover {
+      //       background-color: rgb(195, 93, 71);
+      //       color: #fff;
+      //     }
+      //   }
+      //   .dropdown-item-update {
+      //     border: 1px solid #ccc;
+      //     border-top: 1px solid #fff;
+      //     // border-right: 1px solid #ccc;
+      //     // border-left: 1px solid #ccc;
+      //     position: absolute;
+      //     right: 0px;
+      //     top: 45px;
+      //     font-weight: bold;
+      //     padding: auto;
+      //     z-index: 1;
+      //     width: 200px;
+      //     text-align: center;
+      //     padding: 5px;
+      //     border-bottom-left-radius: 2px;
+      //     border-bottom-right-radius: 2px;
+      //     &:hover {
+      //       background-color: rgb(195, 93, 71);
+      //       color: #fff;
+      //     }
+      //   }
+      // }
+      // .test-dropdown {
+      //   position: absolute;
+      //   margin-left: 5px;
+      //   text-decoration: none;
+      //   &:hover {
+      //     text-decoration: none;
+      //   }
+      // }
     }
   }
+}
+
+//tag show
+
+.tag-show-wrapper {
+  height: 100vh;
 }
