add minor tweaks for dynamic display

--- a/app/assets/stylesheets/components/notebook.scss
+++ b/app/assets/stylesheets/components/notebook.scss
@@ -148,6 +148,8 @@
       padding-right: 5px;
     }
     .notebook-sort-link {
+      display: flex;
+      align-items: center;
       text-decoration: none;
       color: black;
     }
