--- a/app/assets/stylesheets/components/notes.scss
+++ b/app/assets/stylesheets/components/notes.scss
@@ -5,6 +5,7 @@
   height: 100%;
   font-family: $serif;
   overflow-y: scroll;
+  width: 100%;
   .note-header {
     height: 100px;
     width: 100%;
