--- a/app/assets/stylesheets/components/notes.scss
+++ b/app/assets/stylesheets/components/notes.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   height: 100%;
   font-family: $serif;
-  overflow-y: scroll;
+  // overflow-y: scroll;
   width: 100%;
   .note-header {
     height: 100px;
