--- a/app/assets/stylesheets/components/notebook.scss
+++ b/app/assets/stylesheets/components/notebook.scss
@@ -292,7 +292,7 @@
     max-width: 670px;
     width: 380px;
     min-width: 196px;
-    // position: ;
+    position: fixed;
     background: #f8f8f8;
     padding: 25px 25px;
     font-weight: bold;
