--- a/app/assets/stylesheets/components/notebook.scss
+++ b/app/assets/stylesheets/components/notebook.scss
@@ -457,7 +457,6 @@
     .note-dropdown-item-div {
       position: absolute;
       padding: 12px 0;
-      // right: 0px;
       font-weight: bold;
       z-index: 1;
       width: 200px;
@@ -471,6 +470,7 @@
         font-size: 14px;
         &:hover {
           background-color: #f2f2f2;
+          cursor: pointer;
           color: #333;
           border-radius: 4px;
         }
@@ -494,6 +494,7 @@
         color: #000;
         &:hover {
           background-color: #f2f2f2;
+          cursor: pointer;
           // color: #333;
           border-radius: 4px;
         }
