--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
   <meta property="og:title" content="infiNote"/>
-  <meta property="og:image" content="<%= image_url("notes_pic.png") %>"/>
+  <meta property="og:image" content="<%= image_url("infinote.gif") %>"/>
   <meta property="og:description" content="A clone of the popular note-taking application 'Evernote', infiNote allows users to create, render, update and delete notes, notebooks and tags. Users may add notes to notebooks or tag them for better organization.
 
   Built using React, Redux and Ruby on Rails."/>
