--- a/app/assets/stylesheets/components/tags.scss
+++ b/app/assets/stylesheets/components/tags.scss
@@ -49,6 +49,7 @@
         padding-right: 12px;
       }
       .create-tag-btn {
+        cursor: pointer;
         padding: 0;
         color: $green;
         display: flex;
