--- a/app/assets/stylesheets/components/modal.scss
+++ b/app/assets/stylesheets/components/modal.scss
@@ -66,7 +66,9 @@
     .modal-li-alt {
       color: red;
       font-size: 14px;
+      cursor: auto;
       &:hover {
+        color: red;
         cursor: auto;
         background-color: #fff;
         font-weight: normal;
