--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -143,6 +143,9 @@
         flex: 1;
         margin-left: 10px;
         .sidebar-icon {
+          color: #ccc;
+          position: relative;
+          top: -5px;
           margin: 0 10px;
           font-size: 12px;
         }
@@ -157,71 +160,6 @@
     height: 500px;
     font-size: 14px;
     font-weight: lighter;
-  }
-  .expanded-side-nav-action-dropdown {
-    .sienavbar-profile-title {
-      display: flex;
-      align-items: center;
-      flex: 1;
-      margin-left: 10px;
-      // color: pink;
-    }
-    .sidenavbar-icon {
-      margin: 0 10px;
-      font-size: 12px;
-    }
-    .expanded-side-nav-action-dropdown-btn {
-      display: inline;
-      border: none;
-      box-shadow: none;
-      outline: none;
-      cursor: pointer;
-      color: #000;
-    }
-    .angledown-i {
-      color: #cccccc;
-      font-size: 14px;
-      font-weight: light;
-      margin-right: 30px;
-    }
-
-    .expanded-side-nav-action-dropdown-ul {
-      position: absolute;
-      display: hidden;
-      z-index: 1;
-      transform: rotateX(-90deg);
-      box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
-      // margin: 0;
-      // padding: 0;
-      left: 150px;
-      top: 40px;
-      padding: 12px 0;
-      border-radius: 5px;
-
-      background: #fff;
-    }
-    .expanded-side-nav-action-dropdown-ul.active {
-      transform: rotateX(0deg);
-    }
-    .expanded-side-nav-action-dropdown-ul li {
-      list-style: none;
-      font-family: $serif;
-      font-size: 14px;
-      font-weight: bolder;
-      width: 200px;
-      display: block;
-      padding: 8px 30px;
-      text-align: center;
-      text-decoration: none;
-      background: #fff;
-      color: #000;
-      cursor: pointer;
-      text-align: center;
-      &:hover {
-        background-color: #f2f2f2;
-        color: #000;
-      }
-    }
   }
 }
 
@@ -307,4 +245,47 @@
 .change-user-li {
   // border: 1px solid #737373;
   text-align: center;
+}
+
+.nav-dropdown {
+  // top: -5px;
+  position: absolute;
+  // right: 0px;
+  cursor: pointer;
+  color: white;
+}
+.nav-dropdown-li {
+  height: 0px;
+  display: flex;
+  align-items: center;
+  padding-bottom: 6px;
+  position: relative;
+
+  .nav-dropdown-item-div {
+    border-radius: 1px;
+    background-color: #fff;
+    position: absolute;
+    right: 20px p {
+
+    }
+  }
+}
+.nav-dropdown-item-logout {
+  position: absolute;
+  padding: 12px 0;
+  left: 0px;
+  font-weight: bold;
+  z-index: 1;
+  width: 200px;
+  text-align: center;
+  border-radius: 4px;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #fff;
+  color: #000;
+  &:hover {
+    background-color: #f2f2f2;
+    cursor: pointer;
+    color: #333;
+    border-radius: 4px;
+  }
 }
