--- a/app/assets/stylesheets/components/notebook.scss
+++ b/app/assets/stylesheets/components/notebook.scss
@@ -101,10 +101,10 @@
 
     .notebook-sort {
       height: 40px;
-      font-size: 11px;
+      font-size: 12px;
       line-height: 20px;
       font-weight: lighter;
-      color: #4d4d4d;
+      color: #000;
       background-color: #f8f8f8;
 
       .sort-title {
