--- a/app/assets/stylesheets/components/session.scss
+++ b/app/assets/stylesheets/components/session.scss
@@ -13,14 +13,14 @@
   .splash-inner-content {
     display: flex;
     justify-content: space-between;
-    margin: 0 80px
+    margin: 0 80px;
+    padding: 10px 0;
     // padding-bottom: 10px;
     // margin-bottom: 20px;
   }
 }
 .splash-img {
   display: flex;
-  margin-top: 5px;
   margin-left: 20px;
   height: 50px;
   width: auto;
@@ -30,7 +30,7 @@
   color: black;
   display: flex;
   align-items: center;
-  padding-top: 5px;
+  // padding-top: 5px;
   padding-right: 30px;
   font-size: 20px;
   button {
@@ -51,6 +51,12 @@
     text-decoration: none;
     &:hover {
       color: $green;
+    }
+  }
+  ul {
+    display: flex;
+    li {
+      padding: 0px 5px;
     }
   }
 }
@@ -438,25 +444,6 @@
       }
     }
 
-    // .submit-button {
-    //   margin-top: 7px;
-    //   margin-bottom: 14px;
-    //   width: auto;
-    //   justify-content: center;
-    //   color: white;
-    //   background: $green;
-    //   border-radius: 7px;
-    //   width: 100%;
-    //   padding: 13px 20px;
-    //   padding-right: 1.3333em;
-    //   padding-left: 1.3333em;
-    //   border: 1px solid white;
-    //   font-family: $sans;
-    // }
-    // .submit-button:hover {
-    //   background-color: $green-hover;
-    // }
-
     .error-ul,
     .redirect-login {
       text-align: center;
@@ -472,6 +459,36 @@
     }
     .error-ul {
       color: red;
+    }
+  }
+}
+
+.splash-dropdown-li {
+  position: relative;
+  font-family: $serif;
+
+  .splash-dropdown-item-div {
+    position: absolute;
+    right: 0px;
+    font-size: 16px;
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
+    background: #fff;
+    border: 1px solid #ccc;
+    font-weight: 500;
+    z-index: 1;
+    width: 200px;
+    text-align: center;
+    padding: 12px 0;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    width: 150px;
+    text-align: left;
+    li {
+      padding: 10px;
+    }
+    i {
+      padding-right: 5px;
     }
   }
 }
