--- a/app/assets/stylesheets/components/home.scss
+++ b/app/assets/stylesheets/components/home.scss
@@ -127,6 +127,8 @@
         min-width: 172px;
         background: #fff;
         margin-right: 10px;
+        margin-bottom: 5px;
+        box-shadow: 1px 2px 6px rgba(0, 0, 0, 0.4);
         p {
           overflow-x: hidden;
           text-overflow: ellipsis;
