add box shadow to home notes

--- a/app/assets/stylesheets/components/home.scss
+++ b/app/assets/stylesheets/components/home.scss
@@ -132,6 +132,7 @@
         p {
           overflow-x: hidden;
           text-overflow: ellipsis;
+          padding: 5px 10px;
         }
         .home-note-body-time {
           font-size: 13px;
