--- a/app/assets/stylesheets/components/tags.scss
+++ b/app/assets/stylesheets/components/tags.scss
@@ -177,7 +177,8 @@
   }
   .tag-notes-showpage {
     height: 100%;
-    width: (100vw-44vw);
+    width: 100%;
+    // width: (100vw-44vw);
     background: #f8f8f8;
   }
 }
