--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,9 +13,74 @@
  *= require_self
  */
 
- @import './base/reset.scss';
- @import './base/fonts.scss';
- @import './base/palette.scss';
- @import './base/mixins.scss';
- @import './components/*';
- 
+@import "./base/reset.scss";
+@import "./base/fonts.scss";
+@import "./base/palette.scss";
+@import "./base/mixins.scss";
+@import "./components/*";
+
+.main {
+  max-width: 100vw;
+}
+
+@media (max-width: 765px) {
+  .main {
+    width: 100%;
+  }
+  .sidenavbar {
+    width: 0px;
+  }
+}
+
+//responsive display
+@media (max-width: 800px) {
+  .main {
+  }
+  .note-list {
+    display: none !important;
+    width: 0px;
+  }
+  .tag-notes-showpage {
+    max-width: 600px !important;
+  }
+  .empty-note-show-wrapper {
+    max-width: 0px !important;
+  }
+}
+@media (max-width: 760px) {
+  .tag-notes-showpage {
+  }
+  .empty-note-show-wrapper {
+    max-width: 0px !important;
+  }
+  .sidenavbar {
+    display: none !important;
+  }
+}
+
+@media (max-width: 765px) {
+  .sidenavbar {
+    display: none;
+  }
+  .home {
+    width: 100%;
+    max-width: 600px;
+    display: flex;
+  }
+
+  .home-body {
+    display: grid;
+    margin: 24px 0px 24px 0px;
+
+    min-width: 600px;
+    max-width: 600px;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .home-body-notes {
+    grid-column: span 3;
+  }
+  .home-project-links {
+    background-color: pink;
+  }
+}
