--- a/app/assets/stylesheets/components/notebook.scss
+++ b/app/assets/stylesheets/components/notebook.scss
@@ -1,6 +1,6 @@
 .main {
   background-color: #f8f8f8;
-  max-width: 100vw;
+  // max-width: 100vw;
 }
 
 .notebook-index-wrapper {
@@ -309,8 +309,8 @@
 
 .note-list {
   height: 100vh;
-  max-width: 670px;
-  min-width: 380px;
+  // max-width: 670px;
+  // min-width: 380px;
   width: 380px;
   background: #f8f8f8;
   border-right: 1px solid #e6e6e6;
@@ -321,7 +321,7 @@
   .note-list-header {
     max-width: 670px;
     width: 380px;
-    min-width: 196px;
+    // min-width: 196px;
     position: fixed;
     background: #f8f8f8;
     padding: 25px 25px;
@@ -428,7 +428,6 @@
   display: flex;
   align-items: center;
   padding-bottom: 6px;
-  // position: relative;
   .dropdown {
     top: 75px;
     left: 360px;
@@ -452,15 +451,6 @@
       text-decoration: none;
     }
   }
-  // .test {
-  //   position: absolute;
-  //   top: 0px;
-  //   bottom: 0;
-  //   right: 0;
-  //   left: 0;
-  //   // z-index: 0;
-  //   background: transparent;
-  // }
   .note-dropdown {
     z-index: 10;
     position: relative;
@@ -510,50 +500,17 @@
         }
       }
     }
-    // .note-dropdown-item-delete {
-    //   border: 1px solid #ccc;
-    //   position: absolute;
-    //   left: 0px;
-    //   top: 47px;
-    //   font-weight: bold;
-    //   z-index: 1;
-    //   width: 200px;
-    //   text-align: center;
-    //   padding: 5px;
-    //   border-bottom-right-radius: 4px;
-    //   border-bottom-left-radius: 4px;
-    //   &:hover {
-    //     background-color: rgb(195, 93, 71);
-    //     color: #fff;
-    //   }
-    // }
-    // .note-dropdown-item-update {
-    //   width: 200px;
-    //   text-align: center;
-    //   padding: 5px;
-    //   border: 1px solid #ccc;
-    //   border-top: 1px solid #ccc;
-    //   background-color: white;
-    //   font-weight: bold;
-    //   position: absolute;
-    //   right: 0px;
-    //   top: 20px;
-    //   //   font-weight: bold;
-    //   z-index: 1;
-    //   //   width: 200px;
-    //   //   text-align: center;
-    //   border-top-left-radius: 4px;
-    //   border-top-right-radius: 4px;
-    //   &:hover {
-    //     background-color: rgb(195, 93, 71);
-    //     color: #fff;
-    //   }
-    // }
+
     position: relative;
-    // left: 20px;
     svg {
       font-size: 20px;
     }
     text-decoration: none;
+  }
+}
+
+@media (max-width: 1000px) {
+  .note-list {
+    display: none !important;
   }
 }
