--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
   <meta property="og:url"
   content="https://infinote-app.herokuapp.com/#/">
   
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Infinote</title>
     <title>Inf2</title>
     <%= csrf_meta_tags %>
