--- a/app/assets/stylesheets/components/notebook.scss
+++ b/app/assets/stylesheets/components/notebook.scss
@@ -317,7 +317,7 @@
   display: flex;
   flex-direction: column;
   font-family: $serif;
-  overflow: scroll;
+  overflow-y: scroll;
   .note-list-header {
     max-width: 670px;
     width: 380px;
