--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,14 +23,14 @@
   max-width: 100vw;
 }
 
-@media (max-width: 765px) {
-  .main {
-    width: 100%;
-  }
-  .sidenavbar {
-    width: 0px;
-  }
-}
+// @media (max-width: 765px) {
+//   .main {
+//     width: 100%;
+//   }
+//   .sidenavbar {
+//     width: 0px;
+//   }
+// }
 
 //responsive display
 @media (max-width: 800px) {
@@ -44,8 +44,15 @@
   .tag-notes-showpage {
     max-width: 600px !important;
   }
+  .note-list {
+    display: block;
+    width: 600px !important;
+  }
   .empty-note-show-wrapper {
     max-width: 0px !important;
+  }
+  .sidenavbar {
+    display: none !important;
   }
 }
 
@@ -70,12 +77,6 @@
   }
 }
 
-@media (max-width: 700px) {
-  .note-list {
-    display: none !important;
-  }
-}
-
 @media (max-width: 760px) {
   .sidenavbar {
     display: none !important;
@@ -84,5 +85,17 @@
   .note-list {
     display: block;
     width: 600px !important;
+  }
+}
+
+@media (max-width: 700px) {
+  .note-list {
+    display: none !important;
+  }
+  .note {
+    display: 600px !important;
+  }
+  .empty-note-show-wrapper {
+    min-width: 600px !important;
   }
 }
