--- a/app/assets/stylesheets/components/notes.scss
+++ b/app/assets/stylesheets/components/notes.scss
@@ -211,6 +211,7 @@
     }
     .note-tag-ul {
       display: flex;
+      position: relative;
       button {
         margin-bottom: 2px;
         cursor: pointer;
@@ -221,13 +222,31 @@
         border-radius: 14px;
         color: #fff;
         background-color: $green;
-        // background-color: #f2f2f2;
         white-space: nowrap;
-        // border: 2px solid #f2f2f2;
         font-weight: 400;
         &:hover {
           background-color: $green-hover;
         }
+        // .delete-tooltip {
+        //   visibility: hidden;
+        //   color: #fff;
+        //   text-align: center;
+        //   position: relative;
+        //   width: 0px;
+        //   bottom: 0;
+        //   height: 28px;
+        //   padding: 0 12px;
+        //   margin-right: 5px;
+        //   border-radius: 14px;
+        //   margin-bottom: 2px;
+        //   z-index: 10;
+        //   background-color: $green-hover;
+        // }
+
+        // &:hover .delete-tooltip {
+        //   visibility: visible;
+        //   width: auto;
+        // }
       }
     }
     .note-tag-div {
@@ -240,6 +259,7 @@
         align-items: center;
         border-radius: 14px;
         font-size: 14px;
+        left: 0px;
       }
     }
   }
