--- a/app/assets/stylesheets/components/tags.scss
+++ b/app/assets/stylesheets/components/tags.scss
@@ -197,7 +197,7 @@
   display: flex;
   flex-direction: column;
   font-family: $serif;
-  overflow: scroll;
+  overflow-y: scroll;
   .note-list-header-tag {
     z-index: 1;
     max-width: 670px;
