--- a/app/assets/stylesheets/components/notes.scss
+++ b/app/assets/stylesheets/components/notes.scss
@@ -133,7 +133,7 @@
     .note-body-content {
       height: 80%;
       .quill {
-        height: 100%;
+        height: 500px;
       }
 
       textarea {
