--- a/app/assets/stylesheets/components/scrollbar.scss
+++ b/app/assets/stylesheets/components/scrollbar.scss
@@ -3,10 +3,10 @@
   height: 8px;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: #f2f2f2;
+  background-color: #ccc;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: #f2f2f2;
+  background-color: #ccc;
   border-radius: 10px;
 }
 ::-webkit-scrollbar-track {
